# ssd-sn-tool

./: Cargo.toml  README.md  build.rs
.github/: RELEASE_TEMPLATE.md
.github/workflows/: Build.yml  release.yml
config/: default.yaml  fwver.yaml
src/: codec.rs  config.rs  error.rs  firmware_codec.rs  lib.rs  main.rs  ui.rs
