[package]
name = "ssd_sn_tool"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
lazy_static = "1.4"
eframe = "0.27"
egui = "0.27"

[build-dependencies]
embed-resource = "2.2"  # 替换 winres